--- a/lab1/lab1.ipynb
+++ b/lab1/lab1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -177,26 +177,18 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "469/469 [==============================] - 2s 3ms/step - loss: 0.2655 - accuracy: 0.9241\n",
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.2621 - accuracy: 0.9252\n",
       "Epoch 2/5\n",
-      "469/469 [==============================] - 2s 4ms/step - loss: 0.1085 - accuracy: 0.9683\n",
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.1063 - accuracy: 0.9688\n",
       "Epoch 3/5\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0722 - accuracy: 0.9780\n",
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.0698 - accuracy: 0.9790\n",
       "Epoch 4/5\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0516 - accuracy: 0.9847\n",
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.0505 - accuracy: 0.9850\n",
       "Epoch 5/5\n",
-      "469/469 [==============================] - 2s 5ms/step - loss: 0.0399 - accuracy: 0.9878\n"
+      "469/469 [==============================] - 2s 5ms/step - loss: 0.0390 - accuracy: 0.9887\n",
+      "313/313 [==============================] - 1s 3ms/step - loss: 0.0661 - accuracy: 0.9796\n",
+      "test_acc: 0.9796000123023987\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.src.callbacks.History at 0x7f50208284c0>"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
