--- a/lab1/lab1.ipynb
+++ b/lab1/lab1.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -132,9 +132,7 @@
     }
    ],
    "source": [
-    "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()\n",
-    "print(train_images, train_labels)\n",
-    "print(test_images, test_labels)"
+    "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()"
    ]
   },
   {
