--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -626,9 +626,32 @@
     "                    cv = 3\n",
     "                    )\n",
     " \n",
-    "grid_results = grid.fit(x_train,y_train)\n",
+    "grid_results = grid.fit(x_train, y_train)\n",
     " \n",
     "print(\"Best: %f using %s\" % (grid_results.best_score_, grid_results.best_params_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow Version: 2.13.1\n",
+      "Scikit-Learn Version: 1.3.2\n",
+      "Scikeras:  0.12.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sklearn\n",
+    "import scikeras\n",
+    "print(\"TensorFlow Version:\", tf.__version__)\n",
+    "print(\"Scikit-Learn Version:\", sklearn.__version__)\n",
+    "print(\"Scikeras: \", scikeras.__version__)"
    ]
   }
  ],
