--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -200,7 +200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -214,35 +214,35 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Model: \"sequential_9\"\n",
+            "Model: \"sequential_12\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " conv2d_34 (Conv2D)          (None, 148, 148, 32)      896       \n",
+            " conv2d_46 (Conv2D)          (None, 148, 148, 32)      896       \n",
             "                                                                 \n",
-            " max_pooling2d_34 (MaxPooli  (None, 74, 74, 32)        0         \n",
+            " max_pooling2d_46 (MaxPooli  (None, 74, 74, 32)        0         \n",
             " ng2D)                                                           \n",
             "                                                                 \n",
-            " conv2d_35 (Conv2D)          (None, 72, 72, 64)        18496     \n",
+            " conv2d_47 (Conv2D)          (None, 72, 72, 64)        18496     \n",
             "                                                                 \n",
-            " max_pooling2d_35 (MaxPooli  (None, 36, 36, 64)        0         \n",
+            " max_pooling2d_47 (MaxPooli  (None, 36, 36, 64)        0         \n",
             " ng2D)                                                           \n",
             "                                                                 \n",
-            " conv2d_36 (Conv2D)          (None, 34, 34, 128)       73856     \n",
+            " conv2d_48 (Conv2D)          (None, 34, 34, 128)       73856     \n",
             "                                                                 \n",
-            " max_pooling2d_36 (MaxPooli  (None, 17, 17, 128)       0         \n",
+            " max_pooling2d_48 (MaxPooli  (None, 17, 17, 128)       0         \n",
             " ng2D)                                                           \n",
             "                                                                 \n",
-            " conv2d_37 (Conv2D)          (None, 15, 15, 128)       147584    \n",
+            " conv2d_49 (Conv2D)          (None, 15, 15, 128)       147584    \n",
             "                                                                 \n",
-            " max_pooling2d_37 (MaxPooli  (None, 7, 7, 128)         0         \n",
+            " max_pooling2d_49 (MaxPooli  (None, 7, 7, 128)         0         \n",
             " ng2D)                                                           \n",
             "                                                                 \n",
-            " flatten_9 (Flatten)         (None, 6272)              0         \n",
+            " flatten_12 (Flatten)        (None, 6272)              0         \n",
             "                                                                 \n",
-            " dense_18 (Dense)            (None, 512)               3211776   \n",
+            " dense_24 (Dense)            (None, 512)               3211776   \n",
             "                                                                 \n",
-            " dense_19 (Dense)            (None, 1)                 513       \n",
+            " dense_25 (Dense)            (None, 1)                 513       \n",
             "                                                                 \n",
             "=================================================================\n",
             "Total params: 3453121 (13.17 MB)\n",
@@ -254,7 +254,7 @@
       ],
       "source": [
         "model2 = models.Sequential()\n",
-        "# model2.add(layers.Rescaling(scale=1./255))\n",
+        "#   model2.add(layers.Rescaling(scale=1./255))\n",
         "model2.add(layers.Conv2D(32, (3, 3), activation='relu', input_shape = (150, 150, 3)))\n",
         "model2.add(layers.MaxPooling2D((2, 2)))\n",
         "model2.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
@@ -265,7 +265,7 @@
         "model2.add(layers.MaxPooling2D((2, 2)))\n",
         "model2.add(layers.Flatten())\n",
         "model2.add(layers.Dense(512, activation='relu'))\n",
-        "model2.add(layers.Dense(1, activation='sigmoid'))\n",
+        "model2.add(layers.Dense(1, activation='softmax'))\n",
         "\n",
         "model2.compile(optimizer='rmsprop',\n",
         "                loss='binary_crossentropy',\n",
@@ -285,7 +285,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -346,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -360,20 +360,20 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/30\n",
-            " 78/100 [======================>.......] - ETA: 1s - loss: 19.3062 - accuracy: 0.5090"
+            " 82/100 [=======================>......] - ETA: 1s - loss: 20.9276 - accuracy: 0.4890"
           ]
         },
         {
           "ename": "InvalidArgumentError",
-          "evalue": "Graph execution error:\n\nInput is empty.\n\t [[{{node decode_image/DecodeImage}}]]\n\t [[IteratorGetNext]] [Op:__inference_train_function_51996]",
+          "evalue": "Graph execution error:\n\nInput is empty.\n\t [[{{node decode_image/DecodeImage}}]]\n\t [[IteratorGetNext]] [Op:__inference_train_function_53652]",
           "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mInvalidArgumentError\u001b[0m                      Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[26], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m history \u001b[38;5;241m=\u001b[39m \u001b[43mmodel2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m30\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalidation_data\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdataset_val\u001b[49m\u001b[43m)\u001b[49m\n",
+            "Cell \u001b[0;32mIn[29], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m history \u001b[38;5;241m=\u001b[39m \u001b[43mmodel2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m30\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalidation_data\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdataset_val\u001b[49m\u001b[43m)\u001b[49m\n",
             "File \u001b[0;32m~/.local/lib/python3.8/site-packages/keras/src/utils/traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     67\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;66;03m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[0;32m---> 70\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m     72\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
             "File \u001b[0;32m~/.local/lib/python3.8/site-packages/tensorflow/python/eager/execute.py:53\u001b[0m, in \u001b[0;36mquick_execute\u001b[0;34m(op_name, num_outputs, inputs, attrs, ctx, name)\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     52\u001b[0m   ctx\u001b[38;5;241m.\u001b[39mensure_initialized()\n\u001b[0;32m---> 53\u001b[0m   tensors \u001b[38;5;241m=\u001b[39m pywrap_tfe\u001b[38;5;241m.\u001b[39mTFE_Py_Execute(ctx\u001b[38;5;241m.\u001b[39m_handle, device_name, op_name,\n\u001b[1;32m     54\u001b[0m                                       inputs, attrs, num_outputs)\n\u001b[1;32m     55\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m core\u001b[38;5;241m.\u001b[39m_NotOkStatusException \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m     56\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-            "\u001b[0;31mInvalidArgumentError\u001b[0m: Graph execution error:\n\nInput is empty.\n\t [[{{node decode_image/DecodeImage}}]]\n\t [[IteratorGetNext]] [Op:__inference_train_function_51996]"
+            "\u001b[0;31mInvalidArgumentError\u001b[0m: Graph execution error:\n\nInput is empty.\n\t [[{{node decode_image/DecodeImage}}]]\n\t [[IteratorGetNext]] [Op:__inference_train_function_53652]"
           ]
         }
       ],
