--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -87,19 +87,14 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Epoch 1/5\n",
-            "938/938 [==============================] - 6s 7ms/step - loss: 0.3655 - accuracy: 0.9158 - val_loss: 0.1056 - val_accuracy: 0.9690\n",
-            "Epoch 2/5\n",
-            "938/938 [==============================] - 6s 6ms/step - loss: 0.0874 - accuracy: 0.9749 - val_loss: 0.0761 - val_accuracy: 0.9773\n",
-            "Epoch 3/5\n",
-            "938/938 [==============================] - 6s 6ms/step - loss: 0.0631 - accuracy: 0.9820 - val_loss: 0.0944 - val_accuracy: 0.9722\n",
-            "Epoch 4/5\n",
-            "938/938 [==============================] - 6s 7ms/step - loss: 0.0528 - accuracy: 0.9845 - val_loss: 0.1000 - val_accuracy: 0.9735\n",
-            "Epoch 5/5\n",
-            "938/938 [==============================] - 6s 7ms/step - loss: 0.0445 - accuracy: 0.9875 - val_loss: 0.0791 - val_accuracy: 0.9821\n"
+          "ename": "NameError",
+          "evalue": "name 'models' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mmodels\u001b[49m\u001b[38;5;241m.\u001b[39mSequential()\n\u001b[1;32m      2\u001b[0m model\u001b[38;5;241m.\u001b[39madd(layers\u001b[38;5;241m.\u001b[39mConv2D(\u001b[38;5;241m32\u001b[39m, (\u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m3\u001b[39m), activation\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrelu\u001b[39m\u001b[38;5;124m'\u001b[39m, input_shape\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m28\u001b[39m, \u001b[38;5;241m28\u001b[39m, \u001b[38;5;241m1\u001b[39m)))\n\u001b[1;32m      3\u001b[0m model\u001b[38;5;241m.\u001b[39madd(layers\u001b[38;5;241m.\u001b[39mMaxPooling2D((\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m2\u001b[39m)))\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'models' is not defined"
           ]
         }
       ],
@@ -128,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -200,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -285,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -346,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -383,7 +378,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
